Examples/TUM_Net_Firewall/upper_iptables-save_format
# Generated by Isabelle2014: August 2014 on Wed Apr 08 09:22:31 2015 src: Analyze_TUM_Net_Firewall.thy 
*filter 
:INPUT ACCEPT [0:0] 
:FORWARD ACCEPT [0:0] 
:OUTPUT ACCEPT [0:0] 
-A FORWARD -s 127.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.206/32 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.208/32 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.206/32 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.208/32 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/23 -d 131.159.14.192/27 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.192/27 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.252/32 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.252/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.247/32 -d 0.0.0.0/0 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.247/32 -p all  -j ACCEPT 
-A FORWARD -s 131.159.15.248/32 -d 0.0.0.0/0 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.248/32 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.128/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.36/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.9/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.91/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.47/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.216/32 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.138/32 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.12/32 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.195/32 -d 131.159.14.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.33/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.33/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.33/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.33/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.74/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.7/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.52/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.52/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.52/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 131.159.14.111/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.72/32 -d 131.159.14.111/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.93/32 -d 131.159.14.111/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 131.159.14.111/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.72/32 -d 131.159.14.111/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.93/32 -d 131.159.14.111/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.111/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.17/32 -d 131.159.14.111/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.111/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.43/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.122/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.28/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.0.0/16 -d 131.159.14.12/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.58/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.8/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.10/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.10/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.42/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.30/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.30/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.30/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.30/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.22/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.22/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.1/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.1/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.1/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.1/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.87/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.87/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.125/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.125/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.0/25 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.0/25 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 131.159.14.0/25 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 131.159.14.0/25 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.0/25 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.0/25 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 224.0.0.0/4 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.192/26 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.128/26 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.155/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.50/32 -d 131.159.14.169/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.50/32 -d 131.159.14.169/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.169/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.169/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.169/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.169/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.163/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.144/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.144/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.132/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.137/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.140/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.140/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.42.16/32 -d 131.159.14.140/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.42.174/32 -d 131.159.14.140/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.140/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.42.16/32 -d 131.159.14.140/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.42.174/32 -d 131.159.14.140/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.146/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.146/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.165/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.145/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.145/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.156/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.128/26 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.128/26 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.119/32 -d 131.159.14.128/26 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.128/26 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.128/26 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.119/32 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.21.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.22.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.24.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.51/32 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.180/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.180/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.52/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.52/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.142/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.209/32 -d 131.159.20.5/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.50/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.93/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.140/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.94/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.72/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.50/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.93/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.140/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.94/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.72/32 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.50/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.93/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.140/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.94/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.72/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.50/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.93/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.140/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.94/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.72/32 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.62/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.62/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.85/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.133/32 -d 131.159.20.172/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.132/32 -d 131.159.20.172/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.71/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.195/32 -d 131.159.20.253/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.150/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.131/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.131/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.21/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.21/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.82/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.82/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.111/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.20.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.20.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.91/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.154/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.25/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.47/32 -d 131.159.20.169/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.111/32 -d 131.159.20.169/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.124/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.28/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.18/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.18/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.64/26 -d 131.159.20.70/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.29/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.222/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.40/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.40/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.40/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.209/32 -d 131.159.20.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.63/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.133/32 -d 131.159.20.118/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.132/32 -d 131.159.20.118/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.59/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.59/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.59/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.114/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.114/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.114/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.4/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.87/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.160/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.159/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.185/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.195/32 -d 131.159.20.177/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.74/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.146/32 -d 131.159.20.93/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.146/32 -d 131.159.20.93/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.165/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.30/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.155/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.155/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.32/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.32/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.127/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.72/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.72/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.36/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.151/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.58/32 -d 131.159.20.15/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.158/32 -d 131.159.20.15/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.158/32 -d 131.159.20.6/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.166/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.58/32 -d 131.159.20.19/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.158/32 -d 131.159.20.19/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.120/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.73/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.73/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.45/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.97/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.195/32 -d 131.159.20.13/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.139/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.8/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.20.8/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.20.8/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.20.8/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.209/32 -d 131.159.20.68/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.57/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.20.57/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.133/32 -d 131.159.20.102/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.132/32 -d 131.159.20.102/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.0/24 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.0/24 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.20.0/24 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.20.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.168.212.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 0.0.0.0/0 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 0.0.0.0/0 -p all  -j ACCEPT 
-A FORWARD -s 131.159.14.12/32 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.50/32 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.52/32 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.64/26 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.64/26 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 188.95.232.64/26 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.64/26 -d 0.0.0.0/0 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 0.0.0.0/0 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 0.0.0.0/0 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.0/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.192/26 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.128/26 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.128/26 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.128/26 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.128/26 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.0/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.128/26 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.192/27 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.224/28 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.247/32 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.248/32 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.248/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.248/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.248/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.247/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.247/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.247/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.249/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.249/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.249/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.249/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.246/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.246/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.246/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.241/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.240/28 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.240/28 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.240/28 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.240/28 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.64/26 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.128/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.39/32 -p all  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.9/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.9/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.42.16/32 -d 131.159.15.9/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.42.174/32 -d 131.159.15.9/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.9/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.42.16/32 -d 131.159.15.9/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.42.174/32 -d 131.159.15.9/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.34/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.34/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.36/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.25/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.38/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.15/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.15/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.47/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.29/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.29/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.29/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.30/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.30/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.31/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.50/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.50/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.56/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.16/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.16/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.16/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.42/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.17/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.12/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.46/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.5/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.5/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.8/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.58/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 131.159.15.33/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.72/32 -d 131.159.15.33/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.111/32 -d 131.159.15.33/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.24/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.60/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.23/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.51/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.51/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.39/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.39/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.20/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.49/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.33/32 -d 131.159.15.49/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.56/32 -d 131.159.15.49/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.12/32 -d 131.159.15.49/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.229/32 -d 131.159.15.49/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.49/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.49/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.155/32 -d 131.159.15.49/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.57/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.11/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.11/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.10/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.10/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.44/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.35/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.48/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.26/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.26/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.7/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.32/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.40/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.40/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.43/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.45/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.4/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.18/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.13/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.27/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.27/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.0.0/16 -d 131.159.15.54/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.54/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.1/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.1/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.53/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.14/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.19/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.0/26 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.0/26 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.0/26 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.0/26 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.20.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.22.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.24.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.53/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.9/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.242/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.6/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.8/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.4/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.1/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.37/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.0/24 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.0/24 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.0/24 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.21.0/24 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.0/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.128/26 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.192/27 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.240/28 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.234/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.234/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.228/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.228/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.195/32 -d 131.159.15.228/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.231/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.33/32 -d 131.159.15.231/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.56/32 -d 131.159.15.231/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.49/32 -d 131.159.15.231/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.12/32 -d 131.159.15.231/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.231/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.231/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.233/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.226/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.226/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.229/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.229/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.36/32 -d 131.159.15.229/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.201/32 -d 131.159.15.229/32 -p tcp  -j ACCEPT 
-A FORWARD -s 134.2.172.0/23 -d 131.159.15.229/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.224/28 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.224/28 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.224/28 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.224/28 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.128/26 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.224/27 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.204/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.204/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 213.239.199.116/32 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 85.214.236.18/32 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.205/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.205/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.195/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.195/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.195/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.195/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.221/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.221/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.193/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.193/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.193/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.193/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.201/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.201/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.201/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.215/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.215/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 213.239.199.116/32 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 85.214.236.18/32 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.208/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 213.239.199.116/32 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 85.214.236.18/32 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.206/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.214/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.214/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.197/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.197/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.64/26 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.1.239.86/32 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.64/26 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.234.0/23 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 192.48.107.0/24 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.128/26 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.192/27 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.233.0/24 -d 131.159.14.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.192/27 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.192/27 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.192/27 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.192/27 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.128/26 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.192/27 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.240/28 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.1/32 -d 131.159.14.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.1/32 -d 131.159.14.227/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.227/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.224/28 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.224/28 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.224/28 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.224/28 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.0/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.128/26 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.224/27 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.198/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.198/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.208/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.202/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.195/32 -d 131.159.15.202/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.197/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.195/32 -d 131.159.15.206/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.33/32 -d 131.159.15.209/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.33/32 -d 131.159.15.209/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.201/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.201/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.216/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.216/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.216/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.212/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.200/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.200/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.200/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.192/27 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.192/27 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.192/27 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.192/27 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.0/26 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.128/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.95/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.95/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.224/28 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.192/27 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.224/28 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.192/27 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.240/28 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.128/26 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.128/26 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.240/28 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.15.0/26 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.21.0/24 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.14.0/25 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.192/27 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 188.95.232.128/26 -d 131.159.15.80/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.80/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.96/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.96/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.91/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.91/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.94/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.94/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.93/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.93/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.97/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.97/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.90/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.90/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.92/32 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.92/32 -p udp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.64/26 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.15.64/26 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.64/26 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.15.64/26 -p all  -j DROP 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 130.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.128.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.144.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.152.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.156.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.158.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.0.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.8.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.12.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.0/25 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.128/26 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.192/27 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.14.224/28 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.15.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.16.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.32.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.64.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.128.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.160.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 132.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 136.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 144.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 160.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.247/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.245/32 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.240/28 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 131.159.14.240/28 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.240/28 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 131.159.14.240/28 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.0/24 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/1 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 128.0.0.0/2 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.0.0.0/9 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.128.0.0/11 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.160.0.0/13 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.168.0.0/17 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.168.128.0/18 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.168.192.0/20 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.168.208.0/22 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.168.213.0/24 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.168.214.0/23 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.168.216.0/21 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.168.224.0/19 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.169.0.0/16 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.170.0.0/15 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.172.0.0/14 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.176.0.0/12 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 192.192.0.0/10 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 193.0.0.0/8 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 194.0.0.0/7 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 196.0.0.0/6 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 200.0.0.0/5 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 208.0.0.0/4 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 224.0.0.0/3 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 131.159.20.25/32 -d 192.168.212.9/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.72/32 -d 192.168.212.9/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 192.168.212.8/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.72/32 -d 192.168.212.8/32 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 192.168.212.0/24 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 192.168.212.0/24 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 192.168.212.0/24 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 192.168.212.0/24 -p all  -j DROP 
-A FORWARD -s 131.159.20.25/32 -d 224.0.0.0/4 -p tcp  -j ACCEPT 
-A FORWARD -s 131.159.20.25/32 -d 224.0.0.0/4 -p udp  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j ACCEPT 
-A FORWARD -s 0.0.0.0/0 -d 224.0.0.0/4 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 0.0.0.0/0 -p all  -j DROP 
-A FORWARD -s 0.0.0.0/0 -d 0.0.0.0/0 -p all  -j ACCEPT 
COMMIT 
# make sure no space is after COMMIT 
# Completed on Wed Sep  3 18:02:01 2014 
val it = (): unit
val it = (): unit
val it = (): unit
val it = (): unit
val it = (): unit
val it = (): unit
val it = (): unit
